lavc/dts: Do not set bitrate for DTS-HD Master and High Resolution.

Fixes ticket #4375.

Reviewed-by: Hendrik Leppkes